@@ -3,7 +3,6 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -60,7 +59,7 @@ public class StreamPractice {
                 .filter(p -> p.getAge() <= toAge)
                 .filter(p -> p.getAge() >= fromAge)
                 .filter(p -> p.getSex() == Person.Sex.MAN)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -80,7 +79,7 @@ public class StreamPractice {
                         && p.getAge() >= fromAge && p.getAge() <= maleToAge)
                         || (p.getSex() == Person.Sex.WOMAN
                         && p.getAge() >= fromAge && p.getAge() <= femaleToAge))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -93,7 +92,7 @@ public class StreamPractice {
                 .filter(p -> p.getSex() == Person.Sex.WOMAN && p.getAge() >= femaleAge)
                 .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -115,6 +114,6 @@ public class StreamPractice {
                 .map(Candidate::getName)
                 .sorted()
                 .peek(System.out::println)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
